--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 /[Mm]emoryCaptures/
 /[Uu]ser[Ss]ettings/
 /UserSettings/Layouts/default-2021.dwlt
+[Uu]ser[Ss]ettings/
+UserSettings/EditorUserSettings.asset
+
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
