Another Attempt at Updating gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,10 @@
 /[Mm]emoryCaptures/
 /[Uu]ser[Ss]ettings/
 /UserSettings/
+/UserSettings/*
 /UserSettings/Layouts/default-2021.dwlt
 [Uu]ser[Ss]ettings/
+[Uu]ser[Ss]ettings/*
 UserSettings/EditorUserSettings.asset
 /UserSettings/EditorUserSettings.asset
 
